; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_vfs.c_mac_vnode_check_exec.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac/extr_mac_vfs.c_mac_vnode_check_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucred = type { i32 }
%struct.vnode = type { i32 }
%struct.image_params = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"mac_vnode_check_exec\00", align 1
@vnode_check_exec = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mac_vnode_check_exec(%struct.ucred* %0, %struct.vnode* %1, %struct.image_params* %2) #0 {
  %4 = alloca %struct.ucred*, align 8
  %5 = alloca %struct.vnode*, align 8
  %6 = alloca %struct.image_params*, align 8
  %7 = alloca i32, align 4
  store %struct.ucred* %0, %struct.ucred** %4, align 8
  store %struct.vnode* %1, %struct.vnode** %5, align 8
  store %struct.image_params* %2, %struct.image_params** %6, align 8
  %8 = load %struct.vnode*, %struct.vnode** %5, align 8
  %9 = call i32 @ASSERT_VOP_LOCKED(%struct.vnode* %8, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @vnode_check_exec, align 4
  %11 = load %struct.ucred*, %struct.ucred** %4, align 8
  %12 = load %struct.vnode*, %struct.vnode** %5, align 8
  %13 = load %struct.vnode*, %struct.vnode** %5, align 8
  %14 = getelementptr inbounds %struct.vnode, %struct.vnode* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.image_params*, %struct.image_params** %6, align 8
  %17 = load %struct.image_params*, %struct.image_params** %6, align 8
  %18 = getelementptr inbounds %struct.image_params, %struct.image_params* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @MAC_POLICY_CHECK(i32 %10, %struct.ucred* %11, %struct.vnode* %12, i32 %15, %struct.image_params* %16, i32 %19)
  %21 = load i32, i32* @vnode_check_exec, align 4
  %22 = load i32, i32* %7, align 4
  %23 = load %struct.ucred*, %struct.ucred** %4, align 8
  %24 = load %struct.vnode*, %struct.vnode** %5, align 8
  %25 = load %struct.image_params*, %struct.image_params** %6, align 8
  %26 = call i32 @MAC_CHECK_PROBE3(i32 %21, i32 %22, %struct.ucred* %23, %struct.vnode* %24, %struct.image_params* %25)
  %27 = load i32, i32* %7, align 4
  ret i32 %27
}

declare dso_local i32 @ASSERT_VOP_LOCKED(%struct.vnode*, i8*) #1

declare dso_local i32 @MAC_POLICY_CHECK(i32, %struct.ucred*, %struct.vnode*, i32, %struct.image_params*, i32) #1

declare dso_local i32 @MAC_CHECK_PROBE3(i32, i32, %struct.ucred*, %struct.vnode*, %struct.image_params*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
